cmake_minimum_required(VERSION 3.9)
project(C__)

set(CMAKE_CXX_STANDARD 11)

add_executable(C__
        "Listes (version orientée objet)-20171129/List.cpp"
        "Listes (version orientée objet)-20171129/List.hpp"
        "Vecteurs (versions orientées-objets)-20171129/Vect6.cpp"
        "Vecteurs (versions orientées-objets)-20171129/Vect6.hpp"
        "Vecteurs (versions orientées-objets)-20171129/Vect7.cpp"
        "Vecteurs (versions orientées-objets)-20171129/Vect7.hpp"
        "Vecteurs (versions orientées-objets)-20171129/Vect8.cpp"
        "Vecteurs (versions orientées-objets)-20171129/Vect8.hpp"
        "Vecteurs (versions orientées-objets)-20171129/Vect9.cpp"
        "Vecteurs (versions orientées-objets)-20171129/Vect9.hpp"
        "Vecteurs (versions orientées-objets)-20171129/VectB.hpp"
        "Vecteurs (versions orientées-objets)-20171129/VectX.cpp"
        "Vecteurs (versions orientées-objets)-20171129/VectX.hpp"
        CircBidirLinkedList.cpp
        CircBidirLinkedList.hpp
        List.cpp
        List.hpp
        main.cpp
        min_max.cpp
        min_max.hpp
        tableau.cpp
        tableau.hpp)
